# Graph-Data-Modeling-in-Python

./: .gitignore  pyproject.toml
CH01/: 01.1_intro_to_networkx_and_igraph.ipynb  requirements.txt
